# forexMaster

./: .gitignore  README.md  main  makefile
codeGen/: dic2Code.py  symbols.txt  symbols2Code.py
dicDownload/: .directory  Account <1> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AccountType <581> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AccruedInterestAmt <159> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AccruedInterestRate <158> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AcctIDSource <660> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  Adjustment <334> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AdjustmentType <718> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AdvId <2> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AdvRefID <3> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AdvSide <4> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AdvTransType <5> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AffectedOrderID <535> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AffectedSecondaryOrderID <536> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AffirmStatus <940> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AggregatedBook <266> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AgreementCurrency <918> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AgreementDate <915> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AgreementDesc <913> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AgreementID <914> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocAccount <79> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocAccountType <798> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocAccruedInterestAmt <742> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocAcctIDSource <661> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocAvgPx <153> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocCancReplaceReason <796> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocHandlInst <209> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocID <70> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocInterestAtMaturity <741> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocIntermedReqType <808> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocLinkID <196> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocLinkType <197> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocNetMoney <154> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocNoOrdersType <857> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocPrice <366> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocQty <80> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocRejCode <88> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocReportID <755> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocReportRefID <795> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  AllocReportType <794> field – FIX 4.4 – FIX Dictionary – Onix Solutions.html  (+914 more)
fixGen/: dic2Code.py  files.txt  fixGen  fixGen.cpp  fixGenv1.0.txt  gen2Code  gen2Code.cpp  generatedFixDic.txt
libs/quickerfix/: CMakeLists.txt  README  VSSettings.props  VSSettings_x64.props  VSSettings_x86.props  configure.ac  quickfix_vs14.sln
libs/quickerfix/UnitTest++/: UnitTest++_vs14.vcxproj
libs/quickerfix/cmake/: FindTBB.cmake  QuickfixPlatformSettings.cmake  QuickfixPrebuildSetup.cmake  config.h.cmake
libs/quickerfix/cmake/test/: select.cc
libs/quickerfix/doc/html/: building.html
libs/quickerfix/examples/: CMakeLists.txt
libs/quickerfix/examples/codec/: CMakeLists.txt  codec  example_codec_vs14.vcxproj
libs/quickerfix/examples/executor/C++/: Application.cpp  Application.h  CMakeLists.txt  Makefile.am  example_executor_cpp_vs14.vcxproj  executor.cpp
libs/quickerfix/examples/latency/: CMakeLists.txt  example_latency_vs14.vcxproj  latency  latency_nv.cfg
libs/quickerfix/examples/ordermatch/: Application.cpp  Application.h  CMakeLists.txt  example_ordermatch_vs14.vcxproj
libs/quickerfix/examples/ordermatch/test/: CMakeLists.txt
libs/quickerfix/examples/tradeclient/: Application.cpp  Application.h  CMakeLists.txt  example_tradeclient_vs14.vcxproj  tradeclient.cpp  tradeclient.stp
libs/quickerfix/m4/: ax_emx.m4  ax_fieldorder.m4  ax_lib_boost.m4  ax_ruby.m4  ax_sso.m4  ax_systemtap.m4  ax_throw_decl.m4  ax_vma.m4
libs/quickerfix/spec/: Generator.rb  GeneratorCPP.rb
libs/quickerfix/src/: CMakeLists.txt  Makefile.am  at_application.h  pt.cpp  quickfix.i  stdafx.h  test_acceptance_vs14.vcxproj  test_performance_vs14.vcxproj  test_unit_vs14.vcxproj
libs/quickerfix/src/C++/: Acceptor.cpp  CMakeLists.txt  Config.h  DataDictionary.cpp  DataDictionaryProvider.cpp  DataDictionaryProvider.h  Dictionary.cpp  Field.h  FieldConvertors.cpp  FieldMap.cpp  FieldMap.h  FieldTypes.cpp  FileLog.cpp  FileStore.cpp  FixString.h  Group.cpp  HttpConnection.cpp  HttpMessage.cpp  HttpParser.cpp  HttpServer.cpp  Initiator.cpp  Log.cpp  Makefile.am  Message.cpp  MessageSorters.cpp  MessageSorters.h  MessageStore.cpp  MySQLLog.cpp  MySQLStore.cpp  NullStore.cpp  OdbcLog.cpp  OdbcStore.cpp  PUGIXML_DOMDocument.cpp  Parser.cpp  PostgreSQLLog.cpp  PostgreSQLStore.cpp  SSLSocketAcceptor.cpp  SSLSocketConnection.cpp  SSLSocketInitiator.cpp  Session.cpp  (+21 more)
libs/quickerfix/src/C++/test/: FieldConvertorsTestCase.cpp  MessagesTestCase.cpp  SessionTestCase.cpp  SocketServerTestCase.cpp  TestHelper.h
libs/quickerfix/src/python/: quickfix.i  quickfix.py  quickfix_fields.py  swig.sh
libs/quickerfix/src/python2/: Makefile.am
libs/quickerfix/src/python3/: Makefile.am
libs/quickerfix/src/ruby/: Makefile.am  extconf.rb  make_ruby.sh  quickfix_fields.rb
libs/quickerfix/test/: runat.bat  runat_threaded.bat  runpt.bat  runut.bat
libs/quickerfix/test/atrun/: test_acceptance_runner_vs14.vcxproj
src/: FIX.cpp  FIX.hpp  Logger.cpp  Logger.hpp  (+12 more)
(+573 files in other folders)
